@@ -2,35 +2,127 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.scholarlydata</groupId>
+  <groupId>org.w3id.scholarlydata</groupId>
   <artifactId>clodg2</artifactId>
   <version>1.0.0-SNAPSHOT</version>
-  <packaging>bundle</packaging>
+  <packaging>jar</packaging>
 
   <name>cLODg2</name>
   <description>conference Linked Open Data generator</description>
+  
+  <prerequisites>
+    <maven>3.0.3</maven>
+  </prerequisites>
 
    <build>
-    <!-- make it an OSGi bundle -->
     <plugins>
-      <plugin>
-        <groupId>org.apache.felix</groupId>
-        <artifactId>maven-scr-plugin</artifactId>
+	  <!-- requires Java 8 -->
+	  <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-enforcer-plugin</artifactId>
+		<version>1.4.1</version>
+        <executions>
+          <execution>
+            <id>enforce-java</id>
+            <goals>
+              <goal>enforce</goal>
+            </goals>
+            <configuration>
+              <rules>
+                <requireJavaVersion>
+                  <message>Java 8 or higher is required to compile this module</message>
+                  <version>1.8</version>
+                </requireJavaVersion>
+              </rules>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
-        <groupId>org.apache.felix</groupId>
-        <artifactId>maven-bundle-plugin</artifactId>
-        <extensions>true</extensions>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-clean-plugin</artifactId>
+        <version>3.0.0</version>
         <configuration>
-          <instructions>
-            <Export-Package>
-              org.scholarlydata.clodg;version=${project.version},
-              org.scholarlydata.clodg.*;version=${project.version}
-            </Export-Package>
-            <Import-Package>
-              *
-            </Import-Package>
-          </instructions>
+          <filesets>
+            <fileset>
+              <directory>.</directory>
+              <includes>
+                <include>datagen/**</include>
+                <include>*.log</include>
+              </includes>
+            </fileset>
+          </filesets>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>2.4.3</version>
+        <configuration>
+	    <filters>
+	        <filter>
+	            <artifact>*:*</artifact>
+	            <excludes>
+	                <exclude>META-INF/*.SF</exclude>
+	                <exclude>META-INF/*.DSA</exclude>
+	                <exclude>META-INF/*.RSA</exclude>
+	            </excludes>
+	        </filter>
+	    </filters>
+	    <!-- Additional configuration. -->
+	</configuration>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.0.0</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <mainClass>org.w3id.scholarlydata.clodg.Clodg</mainClass>
+              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.rat</groupId>
+        <artifactId>apache-rat-plugin</artifactId>
+        <version>0.12</version>
+        <configuration>
+          <excludes></excludes>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.5.1</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>1.7</version>
+        <configuration>
+          <target>
+            <property name="vm.args" value=""/>
+            <java fork="true" jar="${project.build.directory}/${project.build.finalName}.jar"
+                dir="${project.build.directory}">
+              <jvmarg line="-Xmx1024m -XX:MaxPermSize=256M ${vm.args}"/>
+            </java>
+          </target>
         </configuration>
       </plugin>
     </plugins>
@@ -143,9 +235,14 @@
 		<artifactId>freemarker</artifactId>
 		<version>2.3.23</version>
 	</dependency>
-	
-
-        
+	        
   </dependencies>
+  
+  <repositories>
+    <repository>
+      <id>clodg2-repo</id>
+      <url>file://${basedir}/repo</url>
+    </repository>
+  </repositories>
 
 </project>
